--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ permissions:
   pages: write
   id-token: write
 
+env:
+  LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -67,7 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     # Only run Lighthouse if the token is configured.
-    if: github.ref == 'refs/heads/main' && secrets.LHCI_GITHUB_APP_TOKEN != ''
+    if: github.ref == 'refs/heads/main' && env.LHCI_GITHUB_APP_TOKEN != ''
     steps:
       - name: Checkout
         uses: actions/checkout@v4
